Updated bullet one for DM post

--- a/resume.html
+++ b/resume.html
@@ -160,7 +160,7 @@
                     <li>I am currently part of a new automation project for Outbound dialler extracts that will help
                         reduce outages by 90%.
                     </li>
-                    <li>Created 16 apps and 14 flows using Power Apps and Power Automate which helped boost agent and
+                    <li>Created 16 apps using Power Apps and 14 flows using Power Automate which helped boost agent and
                         operation's productivity by 60-70%</li>
                     <li>Created dashboards and reports in association to the apps I've created.</li>
 
