--- a/resume.html
+++ b/resume.html
@@ -91,8 +91,8 @@
             <h4>Front-End Developer</h4>
             <h2>James De Guzman</h2>
             <p>As a front-end web developer, my objective is to create business-focused, professional, and responsive
-                websites using
-                WordPress, elevating client profitability and online presence. I aim to continually hone my coding
+                websites using current web technologies, elevating client profitability and online presence. I aim to
+                continually hone my coding
                 skills and thrive in
                 a collaborative team environment to achieve outstanding results. My work ethic embodies a balanced
                 approach between fun
