Removed 3rd bullet for personal web projects; added 'Phillip' in my resume name.

--- a/resume.html
+++ b/resume.html
@@ -89,7 +89,7 @@
         <div class="summary">
             <!-- Headline Section -->
             <h4>Front-End Developer</h4>
-            <h2>James De Guzman</h2>
+            <h2>James Phillip De Guzman</h2>
             <p>As a front-end web developer, my objective is to create business-focused, professional, and responsive
                 websites using current web technologies, elevating client profitability and online presence. I aim to
                 continually hone my coding
@@ -129,20 +129,6 @@
                     </span>
                 </li>
 
-                <li> <a href="https://64bfc6ea31e2ef64fc8bb473--sprightly-haupia-e71dc7.netlify.app/" target="_blank">
-                        Countdown Timer for Christmas 2023
-                    </a>
-
-
-                    <img src="images/images_resume/dashed_line_1.svg" alt="dashed-line">
-
-                    <span>
-                        [
-                    </span>
-                    JavaScript
-                    <span>
-                        ]
-                    </span>
 
             </ol>
         </div>
