--- a/resume.html
+++ b/resume.html
@@ -44,6 +44,7 @@
                     <li>Excel VBA</li>
                     <li>SQL</li>
                     <li>PowerApps</li>
+                    <li>PowerAutomate</li>
                     <li>PowerQuery</li>
 
                 </ul>
