--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <meta property="og:url" content="https://jamesphillipdeguzman.github.io/wdd131/resume.html">
+    <meta property="og:title" content="My Resume">
+    <meta property="og:description"
+        content="a front-end web developer, my objective is to create business-focused, professional, and responsive websites using current web technologies, elevating client profitability and online presence. I aim to continually hone my coding skills and thrive in a collaborative team environment to achieve out...">
+    "
+    <meta property="og:image" content="//jamesphillipdeguzman.github.io/wdd131/images/James2.jpeg">
+    <meta property="og:image:alt" content="profile picture">
 </head>
 <link rel="stylesheet" href="styles/resume.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
