Fix og:description tag

--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://jamesphillipdeguzman.github.io/wdd131/resume.html">
     <meta property="og:title" content="My Resume">
     <meta property="og:description"
-        content="a front-end web developer, my objective is to create business-focused, professional, and responsive websites using current web technologies, elevating client profitability and online presence. I aim to continually hone my coding skills and thrive in a collaborative team environment to achieve out...">
+        content="As a front-end web developer, my objective is to create business-focused, professional, and responsive websites using current web technologies, elevating client profitability and online presence. I aim to continually hone my coding skills and thrive in a collaborative team environment to achieve out...">
     "
     <meta property="og:image" content="//jamesphillipdeguzman.github.io/wdd131/images/James2.jpeg">
     <meta property="og:image:alt" content="profile picture">
