Updated my resume

--- a/resume.html
+++ b/resume.html
@@ -98,13 +98,12 @@
             <!-- Headline Section -->
             <h4>Front-End Developer</h4>
             <h2>James Phillip De Guzman</h2>
-            <p>As a front-end web developer, my objective is to create business-focused, professional, and responsive
-                websites using current web technologies, elevating client profitability and online presence. I aim to
-                continually hone my coding
-                skills and thrive in
-                a collaborative team environment to achieve outstanding results. My work ethic embodies a balanced
-                approach between fun
-                and work, with a firm belief in maintaining a positive attitude in all endeavors.
+            <p>Creates beautiful and useful websites to add value to the organization using core front-end web
+                technologies such as HTML, CSS, and JavaScript. Leverages these skills to develop and implement
+                responsive web design in customer’s websites and create great user experience to drive revenue and
+                growth. Eager to learn and contribute to a skilled and resolute team to achieving success. Developed
+                strong data management, process improvement, and team collaboration skills as an experienced Data
+                Analyst, Team Leader, and Quality Analyst and as an online student.
             </p>
         </div>
 
@@ -151,12 +150,12 @@
                 <h4>Data Analyst<span class="subtitle"> Deputy Manager</span></h4>
                 <p>Jan 2024 - Present (9 mos)| WNS Global Solutions • Mandurriao, loilo</p>
                 <ul>
-                    <li>I am currently part of a new automation project for Outbound dialler extracts that will help
-                        reduce outages by 90%.
+                    <li>Proactively engaged teams in a new automation solution for Outbound which will help reduce
+                        outages by 90%.
                     </li>
-                    <li>Created 16 apps using Power Apps and 14 flows using Power Automate which helped boost agent and
-                        operation's productivity by 60-70%</li>
-                    <li>Created dashboards and reports in association to the apps I've created.</li>
+                    <li>Created 16 apps and fourteen flows within 2 years which increased operation’s performance by
+                        60%.</li>
+                    <li>Lead automation projects and optimize processes by 40-50%.</li>
 
                 </ul>
             </div>
@@ -197,7 +196,7 @@
                 <p> Aug 2016 - Feb 2020 (3 yrs 7 mos) | WNS Global Solutions • Mandurriao, loilo</p>
                 <ul>
                     <li> Consistently achieve 100% completion of audit requirements for more than 30 agents monthly over
-                        the course of 2 years. </li>
+                        the course of almost 4 years. </li>
                     <li> Provided valuable feedback to agents through an automated auditing tool which I also created as
                         part of my process
                         improvement projects for the Quality team.</li>
@@ -230,9 +229,15 @@
 
             <h4><span class="subtitle">BYU-Pathway Worldwide</span></h4>
 
+            <h5>PC 101, PC 102, PC 103</h5>
+
+            <p>April 2023 - November 2023 | BYU Idaho</p>
+
+            <h4><span class="subtitle">BYU-Idaho</span></h4>
+
             <h5>Bachelor's Degree, Computer Software Engineering</h5>
 
-            <p>2023 - 2026 | BYU Idaho</p>
+            <p>January 2024 - January 2027 | BYU Idaho</p>
 
             <h4><span class="subtitle">Systems Technology Institute</span></h4>
 
